--- a/.github/workflows/dev.workflow.yml
+++ b/.github/workflows/dev.workflow.yml
@@ -39,6 +39,17 @@ jobs:
         uses: google-github-actions/auth@v1
         with:
           credentials_json: ${{ secrets.GCP_CREDENTIALS }}
+      
+      - name: Verify GCP Access
+        run: |
+          # Listar os buckets do projeto para garantir que o acesso ao GCP esteja correto
+          gsutil ls gs://
+
+          # Listar o conteúdo do bucket para verificar se a permissão de leitura/escrita está ok
+          gsutil ls gs://dash-frontend-bucket-dev
+
+          # Verificar permissões de acesso ao bucket com a conta de serviço
+          gsutil iam get gs://dash-frontend-bucket-dev
 
       # Upload dos arquivos para o bucket GCP
       - name: Upload to GCP Bucket
