--- a/.github/workflows/dev.workflow.yml
+++ b/.github/workflows/dev.workflow.yml
@@ -40,10 +40,13 @@ jobs:
         with:
           credentials_json: ${{ secrets.GCP_CREDENTIALS }}
       
-      - name: Configure Docker to use Google Cloud Registry
+      - name: Debug GCP Credentials
         run: |
-          gcloud auth configure-docker
-      
+          echo "${{ secrets.GCP_CREDENTIALS }}" > creds.json
+          gcloud auth activate-service-account --key-file=creds.json
+          gcloud auth list
+          gsutil ls gs://dash-frontend-bucket-dev
+
       - name: Verify GCP Access
         run: |
           # Listar os buckets do projeto para garantir que o acesso ao GCP esteja correto
